# bitcoin-blockparser

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: coverage.yml  rust.yml
migrations/2023-08-09-202146_add_opreturn_table/: down.sql  up.sql
src/: lib.rs  main.rs
src/blockchain/parser/: blkfile.rs  chain.rs  index.rs  mod.rs  reader.rs  types.rs
src/blockchain/proto/: block.rs
src/blockchain/proto/script/: custom.rs  mod.rs
src/callbacks/: balances.rs  common.rs  csvdump.rs  mod.rs  opreturn.rs  simplestats.rs  unspentcsvdump.rs
src/db/: mem.rs  memory.rs  mod.rs  schema.rs
src/parser/: blkfile.rs  chain.rs  index.rs  mod.rs  reader.rs  types.rs
tests/: bitcoin.rs  mainnet.rs  signet.rs  testnet3.rs
tests/common/: mod.rs
tests/testdata/: README.md  clean_leveldb.py
tests/testdata/mainnet/index/: LOG  LOG.old
