[package]
name = "rusty-blockparser"
version = "0.11.0"
authors = ["gcarq <egger.m@protonmail.com>"]
include = ["src/*", "LICENSE", "README.md", "Cargo.toml"]
description = "Blockchain Parser for most common Cryptocurrencies based on Bitcoin"
documentation = "https://github.com/gcarq/rusty-blockparser/blob/master/README.md"
homepage = "https://github.com/gcarq/rusty-blockparser/"
readme = "README.md"
keywords = ["Cryptocurrency", "Bitcoin", "Blockchain", "Parser"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
bitcoin = "0.30.0"
byteorder = "1.4.3"
clap = { version = "4.3.19", features = [ "cargo" ] }
dirs = "5.0.1"
env_logger = "0.10.0"
hex = "0.4.3"
log = { version = "0.4.19", default-features = false, features = ["std"] }
rusty-leveldb = "1.0.6"
seek_bufread = "1.2.2"

[dev-dependencies]
tempfile =  "3.7.0"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0                # Controls the --opt-level the compiler builds with
debug = true                 # Controls whether the compiler passes `-g`
rpath = false                # Controls whether the compiler passes `-C rpath`
lto = false                  # Controls `-C lto` for binaries and staticlibs
debug-assertions = true      # Controls whether debug assertions are enabled
codegen-units = 1            # Controls whether the compiler passes `-C codegen-units`
                             # `codegen-units` is ignored when `lto = true`
# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

# The testing profile, used for `cargo test`
[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

# The benchmarking profile, used for `cargo bench`
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
