[package]
name = "bitcoin-blockparser"
version = "0.11.0"
authors = ["Dominik Spicher <dominikspicher@gmail.com>", "gcarq <egger.m@protonmail.com>"]
description = "Bitcoin Blockchain Parser"
documentation = "https://github.com/dspicher/bitcoin-blockparser/blob/master/README.md"
homepage = "https://github.com/dspicher/bitcoin-blockparser/"
keywords = ["Cryptocurrency", "Bitcoin", "Blockchain", "Parser"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
bitcoin = "0.30.1"
byteorder = "1.4.3"
clap = { version = "4.3.19", features = [ "cargo" ] }
dirs = "5.0.1"
env_logger = "0.10.0"
hex = "0.4.3"
log = { version = "0.4.19", default-features = false, features = ["std"] }
rusty-leveldb = "2.0.0"

[dev-dependencies]
tempfile =  "3.7.0"
