[package]
name = "bitcoin-blockparser"
version = "0.11.0"
authors = ["Dominik Spicher <dominikspicher@gmail.com>", "gcarq <egger.m@protonmail.com>"]
description = "Bitcoin Blockchain Parser"
documentation = "https://github.com/dspicher/bitcoin-blockparser/blob/master/README.md"
homepage = "https://github.com/dspicher/bitcoin-blockparser/"
keywords = ["Cryptocurrency", "Bitcoin", "Blockchain", "Parser"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
bitcoin = "0.30.1"
clap = { version = "4.3.21", features = [ "cargo" ] }
diesel = { version = "2.1.0", features = [ "r2d2", "sqlite" ], default-features = false }
diesel_migrations = "2.1.0"
dirs = "5.0.1"
rusty-leveldb = "2.0.0"
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.17", features = [ "env-filter", "fmt", "ansi", "tracing-log" ], default-features = false }

[dev-dependencies]
hex = "0.4.3"
tempfile =  "3.7.0"
